--- a/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
@@ -9,15 +9,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <style>@media print {#content-to-print {display: block; margin: 2cm;font-size: 12pt;} .no-print {display: none;}}</style>
+
     <link rel="stylesheet" href="/css/base2.min.css">
     <link rel="stylesheet" href="/css/experiment.css">
 </head>
 <body>
 <header-admin>
-    <div class="app-container app-theme-white body-tabs-shadow fixed-header fixed-sidebar">
+    <div class="app-container app-theme-white body-tabs-shadow fixed-header fixed-sidebar" id="div-no-print">
         <!--Header START-->
         <div class="app-header header-shadow">
-            <div class="app-header__logo">
+            <div class="app-header__logo ">
                 <div class="logo-src">
                 </div>
                 <div class="header__pane ml-auto">
@@ -31,7 +34,7 @@
                     </div>
                 </div>
             </div>
-            <div class="app-header__mobile-menu">
+            <div class="app-header__mobile-menu ">
                 <div>
                     <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
                     <span class="hamburger-box">
@@ -40,7 +43,7 @@
                     </button>
                 </div>
             </div>
-            <div class="app-header__menu">
+            <div class="app-header__menu ">
                 <span>
                 <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
                     <span class="btn-icon-wrapper">
@@ -49,7 +52,7 @@
                 </button>
                 </span>
             </div>
-            <div class="app-header__content">
+            <div class="app-header__content ">
                 <!--app-header-left-->
                 <div class="app-header-left">
                     <div class="search-wrapper">
@@ -462,7 +465,7 @@
         </div>
         <!--Header END-->
         <!--THEME OPTIONS START-->
-        <div class="ui-theme-settings">
+        <div class="ui-theme-settings no-print">
             <button type="button" id="TooltipDemo" class="btn-open-options btn btn-warning">
                 <i class="fa fa-cog fa-w-16 fa-spin fa-2x"></i>
             </button>
@@ -853,10 +856,10 @@
         <!--THEME OPTIONS END-->
         <!--MAIN PAGE START-->
         <div class="app-main">
-            <div class="app-sidebar sidebar-shadow">
-                <div class="app-header__logo">
-                    <div class="logo-src"></div>
-                    <div class="header__pane ml-auto">
+            <div class="app-sidebar sidebar-shadow no-print">
+                <div class="app-header__logo ">
+                    <div class="logo-src "></div>
+                    <div class="header__pane ml-auto ">
                         <div>
                             <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
                                     data-class="closed-sidebar">
@@ -867,7 +870,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-header__mobile-menu">
+                <div class="app-header__mobile-menu ">
                     <div>
                         <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
                             <span class="hamburger-box">
@@ -876,7 +879,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="app-header__menu">
+                <div class="app-header__menu ">
                     <span>
                         <button type="button"
                                 class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
@@ -886,7 +889,7 @@
                     </button>
                     </span>
                 </div>
-                <div class="scrollbar-sidebar">
+                <div class="scrollbar-sidebar ">
                     <div class="app-sidebar__inner">
                         <ul class="vertical-nav-menu">
                             <li class="app-sidebar__heading"><a th:href="'/Lab/admin/Dashboard?username='+${#authentication.name}" style="padding: unset">
@@ -1098,7 +1101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="app-main__outer">
+            <div class="app-main__outer no-print">
                 <div th:replace="admin/add-nocite.html :: notice"></div>
                 <div th:replace="admin/add-nocite.html :: noticeUnSuccess"></div>
                 <div th:if="${#request.requestURI == '/Lab/admin/Dashboard'}" class="app-main__inner">
@@ -1116,7 +1119,7 @@
                     <div th:replace="admin/lab-form.html :: lab-form"></div>
                 </div>
                 <div th:if="${#strings.contains(#request.requestURI, '/Lab/admin/room/showFormForUpdate/')}" class="app-main__inner">
-                    <div th:replace="admin/labs-edit-form.html :: form-edit-phone"></div>
+                    <div th:replace="admin/labs-edit-form.html :: form-edit-lab"></div>
                 </div>
 
                                                 <!--/////////////////////////////////-->
@@ -1334,5 +1337,25 @@
             checkuser([[${#authentication.name}]])
         })
     </script>
+<script>
+    function printDiv() {
+        $('#content-to-print').show();
+        var printContents = document.getElementById('content-to-print').innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+        window.print();
+
+        document.body.innerHTML = originalContents;
+    }
+    window.onbeforeprint = function() {
+        $('#div-no-print').removeClass('fixed-header fixed-sidebar');
+        printDiv();
+    };
+    window.onafterprint = function() {
+        $('#div-no-print').addClass('fixed-header fixed-sidebar');
+        $('#content-to-print').hide();
+    };
+</script>
 </body>
 </html>
